kustomize/zwave-js-ui/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zwavejs
  labels:
    name: zwave
spec:
  selector:
    name: zwave
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
  type: ClusterIP
