kustomize/zwave-js-ui/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zwavejs
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - "zwavejs.sjoedin.se"
      secretName: zwavejs-tls
  ingressClassName: nginx
  rules:
    - host: zwavejs.sjoedin.se
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zwavejs
                port:
                  number: 80
